Thank YOUR Lucky Stars

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div>
             <img src="imagens/6thankyouluckystars.jpg" alt="">
-            <p class="nome-do-album">Thank You Lucky Stars</p>
+            <p class="nome-do-album">Thank Your Lucky Stars</p>
             <p class="ano-de-lançamento">Ano de Lançamento: 2015</p>
             <a href="https://open.spotify.com/album/1Y0NDuUWQtjr2V1M4XFtRa?si=P-QXaYzjTg6f9C2whHBmCQ" target="_blank">Acesse clicando aqui</a>
         </div>
